    Fixed: SQL user and password not correctly escaped in imscp.cnf file (Servers::sqld::mysql::installer)
    Moved: Master administrator questions and setup routines into Package::FrontEnd::Installer
    Removed: Update notices (link to errata file is sufficient)
    Renamed: imscp-setup script to imscp-reconfigure

PACKAGES
    Added: Monsta FTP package
    Fixed: ERR_INCOMPLETE_CHUNKED_ENCODING error due to wrong permissions on nginx fastcgi cache directory (FrontEnd)
    Fixed: Missing IP version check (Package::FrontEnd::Installer)
    Fixed: White page due to 'net::ERR_INCOMPLETE_CHUNKED_ENCODING' errors (related to #IP-1530) (PhpMyAdmin)
    Updated: PhpMyAdmin version to 4.6.0 - Only for servers with PHP/MySQL >= 5.5 (Package::PhpMyAdmin::Installer)
    Disabled: Pydio in case PHP >= 7.0.0 is detected

PLUGINS
    Enhancement: Plugin backend packages can now be simple objects
    Fixed: Plugin configuration not synced when triggering plugin list update (when a plugin is in error state)
    Fixed: Plugin manager must load plugins by respecting their priority
    Fixed: The 'change' action must be automatically triggered on plugin list update, even for plugins with error state
    Fixed: Wrong events triggered when a plugin is being locked/unlocked
    Updated: API version to 1.0.4

SERVERS
    Added: i-MSCP own logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)
    Added: i-MSCP own sysvinit script for ProFTPD - solve #IP-1402
    Changed: HTTPD log directories are now bind-mounted as read-only files system
    Changed: setenvif module is now always required ((Httpd servers)
    Fixed: AH01265: attempt to invoke directory as script: /var/www/virtual/<domain.tld>/cgi-bin/
    Fixed: Bad regexp in getTraffic() method leading to unmatching of traffic data (VsFTPd)
    Fixed: Could not build local vsftpd package when gpg has been initialized; .changes file cannot be signed